refactor related work

--- a/master_thesis/master_thesis.tex
+++ b/master_thesis/master_thesis.tex
@@ -11,6 +11,7 @@
 % Verwende gute Type 1 Font: Latin Modern
 \usepackage[T1]{fontenc}
 \usepackage{lmodern}
+\usepackage{titling}
 
 % Sprache des Dokuments (für Silbentrennung und mehr)
 \usepackage[german,english]{babel}
@@ -133,6 +134,9 @@
 
 \pagestyle{empty} % keine Seitenzahlen
 
+\title{High Quality Hypergraph Partitioning via Max-Flow-Min-Cut Computations}
+\author{Tobias Heuer}
+
 % Titelblatt der Arbeit
 \begin{titlepage}
 
@@ -146,13 +150,13 @@
     Master-Thesis
     \vspace*{2cm}
 
-    {\textbf{\huge High Quality Hypergraph Partitioning \\ via Max-Flow-Min-Cut Computations} \par}
+    {\linespread{1.1}\huge\textbf{\thetitle}\par}
     % Siehe auch oben die Felder pdftitle={}
     % mit \par am Ende stimmt der Zeilenabstand
 
     \vfill
 
-    Tobias Heuer
+    \theauthor
 
     \vspace*{45mm}
 
@@ -193,14 +197,12 @@ als die angegebenen Quellen und Hilfsmittel benutzt, die wörtlich oder inhaltli
 Instituts für Technologie zur Sicherung guter wissenschaftlicher Praxis in der jeweils 
 gültigen Fassung beachtet habe.
 
-\bigskip
+\vspace*{15mm}
 
 \noindent
 Karlsruhe, den 05.01.2018
 
 % Unterschrift (handgeschrieben)
-
-\vspace*{5cm}
 
 \clearpage
 
